[package]
name = "edda"
version = "0.1.0"
edition = "2021"

[dependencies]
inline_colorization = "0.1.6"
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
uuid = { version = "1.7.0", features = ["serde"] }
regex = "1.10.3"
futures = "0.3.30"
chrono = "0.4.38"
tokio = { version = "1.0", features = ["full"] }
colored = "2.1.0"
rand = "0.8"